<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@android:color/background_light"
        app:title="Bluetooth"
        app:titleTextColor="@android:color/background_light" />

    <Button
        android:id="@+id/btn_connect"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_connect"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_external_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:hint="@string/hnt_hsv_enter_hue"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/default_hsv_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_external_message" />

    <EditText
        android:id="@+id/et_saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_hsv_enter_saturation"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/default_hsv_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hue"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <EditText
        android:id="@+id/et_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no"
        android:hint="@string/hnt_hsv_enter_value"
        android:text="@string/default_hsv_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_saturation"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_hsv"
        android:backgroundTint="@color/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_value" />

    <Button
        android:id="@+id/btn_red"
        android:backgroundTint="@color/solid_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_orange" />

    <Button
        android:id="@+id/btn_orange"
        android:backgroundTint="@color/solid_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/btn_red"
        app:layout_constraintEnd_toStartOf="@+id/btn_yellow"
        app:layout_constraintTop_toBottomOf="@+id/btn_hsv" />

    <Button
        android:id="@+id/btn_yellow"
        android:backgroundTint="@color/solid_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_orange"
        app:layout_constraintStart_toEndOf="@+id/btn_orange"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_green"
        android:backgroundTint="@color/solid_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_blue" />

    <Button
        android:id="@+id/btn_blue"
        android:backgroundTint="@color/solid_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_purple"
        app:layout_constraintStart_toEndOf="@+id/btn_green"
        app:layout_constraintTop_toBottomOf="@+id/btn_orange" />

    <Button
        android:id="@+id/btn_purple"
        android:backgroundTint="@color/solid_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_blue"
        app:layout_constraintStart_toEndOf="@+id/btn_blue"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_off"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_dark_background"
        android:textSize="30sp"
        android:text="@string/lbl_btn_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blue"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>